--- a/cli/src/app/shared/layout/main-layout/main-layout.component.html
+++ b/cli/src/app/shared/layout/main-layout/main-layout.component.html
@@ -16,3 +16,6 @@
   <!-- Back to Top Button -->
   <app-back-to-top></app-back-to-top>
 </div>
+
+<!-- Notification Toasts - Global for all pages -->
+<app-notification-toast></app-notification-toast>
